--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"express": "^4.14.0",
-		"mongoose": "^4.7.2",
-		"mongodb": "^2.2.14",
-		"body-parser": "^1.15.2",
-		"cors": "^2.8.1",
-		"shortid": "^2.2.6"
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"mongodb": "^3.5.9",
+		"mongoose": "^5.11.20",
+		"nanoid": "^3.1.25"
 	},
 	"engines": {
 		"node": "6.9.1"
@@ -25,5 +26,8 @@
 		"node",
 		"gomix",
 		"express"
-	]
+	],
+	"devDependencies": {
+		"nodemon": "^2.0.5"
+	}
 }
